WEVENTS: various UX fixes
1. Fix the bad form layout on mobile, that also overflowed
2. Make the whole container size always constant
3. Ensure arrow buttons are correctly shown or hidden when a date is
   chosen manually

--- a/css/style.css
+++ b/css/style.css
@@ -348,11 +348,22 @@ h1 {
 #we-select {
 	display: flex;
 	gap: 1em;
+	flex-wrap: wrap;
+	justify-content: stretch;
+}
+#we-select > div {
+	display: flex;
+	gap: 1em;
 	align-items: center;
-	justify-content: space-between;
+	flex-grow: 1;
 }
 #we-select label {
 	font-weight: bold;
+	min-width: 3em;
+}
+#we-select button, select {
+	min-width: 4em;
+	flex: 1;
 }
 #we-events, #we-select, #we-top {
 	margin-top: 1em;
